syntax = "proto3";

package GRPC;

option java_multiple_files = true;
option java_package = "GRPC";

service SolverService {
  rpc isCompiling (ExecutionRequest) returns (CompilationResult);
  rpc solve (ExecutionRequest) returns (Solution);
}

message ExecutionRequest {
    string id = 1;
    float timeout = 2;
    string solverScript = 3;
}

message CompilationResult {
    bool result = 1;
}

message Solution {
  string solution = 1;
}
